// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportCard expect to render with bullseye 1`] = `
<Fragment>
  <Card>
    <div
      className="pf-c-card__header pf-c-title pf-m-xl"
    >
      This is the title
    </div>
    <CardBody>
      <Bullseye>
        children
      </Bullseye>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`ReportCard expect to render with custom classes 1`] = `
<Fragment>
  <Card
    className="customCardClass"
  >
    <div
      className="pf-c-card__header pf-c-title pf-m-xl customHeaderClass"
    >
      This is the title
    </div>
    <CardBody
      className="customBodyClass"
    >
      <Bullseye>
        loaded
      </Bullseye>
    </CardBody>
  </Card>
</Fragment>
`;

exports[`ReportCard expect to render without bullseye 1`] = `
<Fragment>
  <Card>
    <div
      className="pf-c-card__header pf-c-title pf-m-xl"
    >
      This is the title
    </div>
    <CardBody>
      children
    </CardBody>
  </Card>
</Fragment>
`;
